--- a/templates/email.html
+++ b/templates/email.html
@@ -1,6 +1,8 @@
 <html>
 <body style="margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">
 <div style="width: 100%; background: #efefef; border-radius: 10px; padding: 10px;">
+
+  <img  src="http://localhost:8000/images/user/default.jpg";  width="50px"; height="50px";>  </img>
   <h4 >Dear Sir</h4>
   </br>
   <div style="margin: 0 auto; width: 90%; text-align: left; margin-left: 10px;">
